Issue #6 Alert text alignment over multiple lines

--- a/style/alerts.css
+++ b/style/alerts.css
@@ -41,3 +41,7 @@
     margin: 0 5px 10px 5px;
     padding: 5px;
 }
+.alertmessage {
+    padding-left:70px;
+    text-indent:-48px;
+}
